# hookpress

./: .env.example  .env.test  .gitignore  README.md  docker-compose.yml  package.json  render.yaml
services/api/: Dockerfile  docker-entrypoint.sh  pyproject.toml  requirements.txt
services/api/alembic/: env.py
services/api/alembic/versions/: .gitkeep  20260714_0001_initial.py  20260714_0002_auth.py  20260714_0003_studio.py  20260714_0004_media_office.py  20260714_0005_market_billing.py  20260714_0006_feed_chat.py  20260714_0007_notifications.py  20260714_0008_auth_extras.py  20260714_0010_office_extras.py  (+5 more)
services/api/app/: __init__.py  main.py
services/api/scripts/: seed.py
services/api/tests/: conftest.py  csrf_helpers.py  test_ai_isolation.py  test_apple_oauth.py  test_auth.py  test_billing_idempotency.py  test_chart_admin_weights.py  test_charts.py  test_chat_pagination.py  test_chat_redis.py  test_commission.py  test_dispute.py  test_feed_extensions.py  test_hardening.py  test_health.py  test_idempotency.py  test_login_events.py  test_login_lockout.py  test_market_order_flow.py  test_media_access.py  test_media_quarantine.py  test_notifications.py  test_oauth_flow.py  test_office_release.py  test_payment_state_machine.py  test_phase2_endpoints.py  test_phase3_endpoints.py  test_phase4_endpoints.py  test_phase5_endpoints.py  test_promotions_proxy.py  test_providers.py  test_rate_limit.py  test_scopes.py  test_scoring_librosa.py  test_session_revoke.py  test_ssrf.py  test_state_machine.py  test_state_transitions.py  test_studio.py  test_studio_lyrics.py
(+342 files in other folders)
